# tool-meister

./: .gitignore  .prompt.md  Cargo.toml  DEVELOPMENT_PLAN.md  GEMINI.md  build.rs
gt-tooling/: .gitignore
gt-tooling/.github/: SECRETS.md  SECURITY.md  dependabot.yml  pull_request_template.md
gt-tooling/.github/workflows/: download-logs.yml  security-scan.yml  test-secrets.yml  version-bump.yml
gt-tooling/log-master/: .gitignore  Execute-WithLogging.ps1  Install-LoggingSystem.ps1  LogAnalyzer.ps1  LogArchiver.ps1  LogMaster.ps1  LogMaster.psd1  LogMaster.psm1  README.md
gt-tooling/log-master/Tests/: LogMaster.Tests.ps1  Test-Logger.ps1
gt-tooling/scripts/: cleanup_monorepo.sh  cleanup_monorepo_v1.sh  recurse-exec.sh
linux/: README.md
linux/arch-tool-meister/: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  Cargo.toml.backup  LICENSE  README.md  config.jsonc  main_menu.jsonc
linux/arch-tool-meister/.github/docs/: CODE_DOCUMENTATION.md  MIGRATION_GUIDE.md  MODULE_SYSTEM.md
linux/arch-tool-meister/.github/instructions/: general.instructions.md  planning.instructions.md  security.instructions.md
linux/arch-tool-meister/.github/planning/: 002.plan.md  README.md
linux/arch-tool-meister/.github/planning/completed/: 001-convert-shell-script-to-rust-tui.md
linux/arch-tool-meister/.github/prompts/: commit.prompt.md  documentation.prompt.md  planning.prompt.md
linux/arch-tool-meister/.github/workflows/: cd.yml  ci.yml
linux/arch-tool-meister/backup/: README.md  arch-tools-meister-modular.sh  config.jsonc  main_menu.jsonc
linux/arch-tool-meister/backup/modules/aur_helpers/: commands.jsonc  config.jsonc  menu.jsonc
linux/arch-tool-meister/backup/modules/git_config/: commands.jsonc  config.jsonc  menu.jsonc
linux/arch-tool-meister/backup/modules/maintenance/: commands.jsonc  config.jsonc  menu.jsonc
linux/arch-tool-meister/backup/modules/module_creator/: commands.jsonc  config.jsonc  menu.jsonc
linux/arch-tool-meister/backup/modules/system/: commands.jsonc  config.jsonc  menu.jsonc
linux/arch-tool-meister/backup/modules/vscode/: commands.jsonc  config.jsonc  menu.jsonc
linux/arch-tool-meister/backup/working-backup/: arch-tools-meister.sh  aur_helpers.jsonc  commands.jsonc  config.jsonc  main_menu.jsonc  vscode_menu.jsonc
linux/arch-tool-meister/crates/atm-tui/: Cargo.toml  build.rs
linux/arch-tool-meister/crates/atm-tui/src/: action.rs  app.rs  cli.rs  components.rs  config.rs  error.rs  errors.rs  logging.rs  main.rs  tui.rs
linux/arch-tool-meister/crates/atm-tui/src/components/: home.rs  menu.rs
linux/arch-tool-meister/crates/atm-web-api/: Cargo.toml
linux/arch-tool-meister/crates/atm-web-api/src/: error.rs  main.rs
linux/arch-tool-meister/crates/core-lib/: Cargo.toml
linux/arch-tool-meister/crates/core-lib/src/: error.rs  lib.rs
linux/arch-tool-meister/crates/core-lib/src/command_executor/: dependency_checker.rs  mod.rs  runner.rs  security.rs
linux/arch-tool-meister/crates/core-lib/src/config/: loader.rs  mod.rs  watcher.rs
linux/arch-tool-meister/crates/core-lib/src/module_manager/: discovery.rs  mod.rs  registry.rs
linux/arch-tool-meister/crates/core-lib/tests/: config_integration.rs  module_integration.rs
linux/arch-tool-meister/crates/shared-types/: Cargo.toml
linux/arch-tool-meister/crates/shared-types/src/: config.rs  error.rs  lib.rs  module.rs
linux/arch-tool-meister/modules/aur_helpers/: module.jsonc
linux/arch-tool-meister/modules/git_config/: module.jsonc
linux/arch-tool-meister/modules/maintenance/: module.jsonc
linux/arch-tool-meister/modules/module_creator/: module.jsonc
linux/arch-tool-meister/modules/quit/: module.jsonc
linux/arch-tool-meister/modules/system/: module.jsonc
linux/arch-tool-meister/modules/vscode/: module.jsonc
linux/arch-tool-meister/tests/: integration_tests.rs
linux/fdlimit/: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  referances.md
linux/fdlimit/docs/: Makefile
linux/fdlimit/docs/source/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  introduction.rst  usage.rst
linux/fdlimit/examples/: programmatic_usage.py
linux/fdlimit/scripts/: __init__.py  clean.py  run_tests.py
linux/fdlimit/src/fdlimit/: __init__.py  cli.py  core.py  ui.py
linux/fdlimit/tests/: test_cli.py  test_core.py  test_ui.py
linux/gpu-optimizer/: CHANGELOG.md  README.md  package.json
linux/install-scripts/: git_config.jsonc  main_menu.jsonc
linux/mime-desktop-xdg/: cspell.config.yaml  index.html  package-lock.json  package.json  vite.config.ts
linux/mime-desktop-xdg/src-tauri/: Cargo.toml  tauri.conf.json
linux/mime-desktop-xdg/src-tauri/capabilities/: default.json
linux/mime-desktop-xdg/src-tauri/src/: crud.rs  git_ops.rs  lib.rs  main.rs  mime.rs  scanner.rs  validator.rs
linux/processData/: Cargo.toml  procstrings.sh
linux/processData/src/: app.rs  fuzzy.rs  main.rs  memory.rs  monitor.rs  process.rs  ui.rs
linux/scripts/: add_windows_boot.sh  check-vmem.sh  env-list.sh  fix-wifi.sh  gufw-st.sh  nvidia.sh  qosmate-install.sh  repair_boot.sh  t.sh  w3c-awake-v1.sh  w3c-awake-v2.sh  w3c-awake-v3.sh  w3c-awake.sh  wl.sh  zswap-fix.sh  zswap-inv.sh
linux/up-man/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  build.rs
linux/up-man/.gen-ai/instructions/: code-gen.md  commit.md
linux/up-man/.gen-ai/referances/: conventional-commits.md
linux/up-man/.ignore-initial-bash-variant/: up-all.sh
linux/up-man/resources/: default_config.toml
linux/up-man/scripts/: build-release.sh  test-packages.sh
linux/up-man/src/: cli.rs  main.rs  output.rs
linux/up-man/src/config/: manager.rs  model.rs
linux/up-man/src/package_managers/: detector.rs  mod.rs  runner.rs
linux/up-man/src/shell/: alias.rs
linux/up-man/tests/: integration_tests.rs
linux/wallpaper/: package.json  setup_architecture.sh
linux/wallpaper/src/: App.tsx
manifests/: cargo.jsonc  wezterm.jsonc
src/: commands.rs  config.rs  error.rs  global_config.rs  main.rs
src/commands/: build.rs  config.rs  install.rs  run.rs  update.rs
tests/: integration_tests.rs
(+81 files in other folders)
