[workspace]
resolver = "2"
members = [
    "crates/atm-tui",
    "crates/core-lib",
    "crates/atm-web-api",
    "crates/shared-types",
]

[workspace.package]
version = "2.0.0"
authors = ["Grigor Tonikyan <grigor.tonikyan@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GrigorTonikyan/arch-tool-meister"
rust-version = "1.70.0"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
futures = "0.3.31"

# Serialization
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"

# Error handling
anyhow = "1.0.90"
thiserror = "1.0.65"
color-eyre = "0.6.3"

# Logging and tracing
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }

# CLI and configuration
clap = { version = "4.5.20", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
directories = "5.0.1"

# TUI dependencies
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }

# Web API dependencies
axum = "0.7.5"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
hyper = { version = "1.4.1", features = ["full"] }

# Utility
regex = "1.10"
lazy_static = "1.5.0"
strum = { version = "0.26.3", features = ["derive"] }

# Development and testing
pretty_assertions = "1.4.1"

# Build dependencies
vergen = { version = "9.1.0", features = ["build", "cargo"] }
vergen-gix = { version = "1.0.2", features = ["build", "cargo"] }

# Security and system
libc = "0.2.161"
signal-hook = "0.3.17"

# Text processing
strip-ansi-escapes = "0.2.0"

# Panic handling
better-panic = "0.3.0"
human-panic = "2.0.2"

# Other utilities
derive_deref = "1.1.1"
notify = "6.1.1"

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
