[package]
name = "atm-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Terminal User Interface for Arch Tool Meister"
build = "build.rs"

[[bin]]
name = "arch-tool-meister"
path = "src/main.rs"

[dependencies]
# Internal dependencies
shared-types = { path = "../shared-types" }
core-lib = { path = "../core-lib" }

# Workspace dependencies
better-panic.workspace = true
clap.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
derive_deref.workspace = true
directories.workspace = true
futures.workspace = true
human-panic.workspace = true
lazy_static.workspace = true
libc.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
signal-hook.workspace = true
strip-ansi-escapes.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
regex.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[build-dependencies]
anyhow.workspace = true
vergen.workspace = true
vergen-gix.workspace = true
