[package]
name = "atm-web-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Web API server for Arch Tool Meister"

[[bin]]
name = "atm-web-api"
path = "src/main.rs"

[dependencies]
# Internal dependencies
shared-types = { path = "../shared-types" }
core-lib = { path = "../core-lib" }

# Web framework dependencies
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true

# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
