[package]
name = "core-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core business logic library for Arch Tool Meister"

[dependencies]
shared-types = { path = "../shared-types" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
directories.workspace = true
regex.workspace = true
notify.workspace = true
jsonc-parser = "0.26.2"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
